Fixing z-index of the hamburger menu

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -48,6 +48,7 @@ header {
 
       width: 70vw;
       height: 100vh;
+      z-index: 1;
 
       // transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
